--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -357,21 +357,16 @@
     <!-- Footer with System Information -->
     <footer class="footer py-2 mt-auto">
         <div class="container is-fluid px-5">
-            <div class="columns is-vcentered is-mobile is-multiline">
-                <div class="column is-12-mobile is-4-tablet">
+            <div class="columns is-vcentered is-mobile">
+                <div class="column is-12-mobile is-6-tablet">
                     <p class="is-size-7 opacity-70">
                         <span class="has-text-weight-bold">Build:</span> <span id="buildVersionDisplay">--</span>
                     </p>
                 </div>
-                <div class="column is-12-mobile is-4-tablet has-text-centered-tablet">
+                <div class="column is-12-mobile is-6-tablet has-text-right-tablet">
                     <p class="is-size-7 opacity-70">
                         <span class="has-text-weight-bold">Identificação:</span> <span
                             id="idSource">Carregando...</span>
-                    </p>
-                </div>
-                <div class="column is-12-mobile is-4-tablet has-text-right-tablet">
-                    <p class="is-size-7 opacity-70">
-                        <span class="has-text-weight-bold">Updates:</span> <span id="updateSource">Carregando...</span>
                     </p>
                 </div>
             </div>
@@ -385,11 +380,9 @@
             // Load system information for footer (Global)
             $.getJSON('/api/system/info', function (data) {
                 $('#idSource').text(data.id_source || 'N/A');
-                $('#updateSource').text(data.update_source || 'N/A');
                 $('#buildVersionDisplay').text(data.build_version || 'Unknown');
             }).fail(function () {
                 $('#idSource').text('N/A');
-                $('#updateSource').text('N/A');
                 $('#buildVersionDisplay').text('Unknown');
             });
 
